# xpublish-file-metadata

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish_to_pypi.yml  tests.yml
sandbox/netcdf4/: routes.py
tests/: test_1_setup.py  test_2_netcdf.py  test_3_geotiff.py
xpublish_file_metadata/: __init__.py  plugin.py  provider_plugin.py  shared.py
xpublish_file_metadata/formats/: geotiff.py  grib.py  hdf5.py  netcdf.py
xpublish_netcdf/: __init__.py  plugin.py  router_plugin.py  router_utils.py  shared.py
