[tool.poetry]
name = "xpublish-file-metadata"
version = "0.1.0"
description = "A dataset router plugin for providing serving file metadata"
authors = ["xaviernogueira <xavier.rojas.nogueira@gmail.com>"]
readme = "README.md"
packages = [{include = "xpublish_file_metadata"}]

[tool.poetry.dependencies]
python = "^3.11"
xpublish = "^0.3.2"
netcdf4 = "^1.6.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
