[tool.poetry]
name = "xpublish-file-metadata"
version = "0.1.0"
description = "A dataset router plugin for serving file metadata"
authors = ["xaviernogueira <xavier.rojas.nogueira@gmail.com>"]
readme = "README.md"
packages = [{include = "xpublish_file_metadata"}]

[tool.poetry.dependencies]
python = "^3.11"
xpublish = "^0.3.2"
starlette = "^0.40.0"
setuptools = "^70.0.0"
netcdf4 = {version = "^1.6.4", optional = true}
h5py = {version = "^3.9.0", optional = true}
cfgrib = {version = "^0.9.10.4", optional = true}
rasterio = {version = "^1.3.8", optional = true}
eccodes = {version = "^1.6.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"
netcdf4 = "^1.6.4"
h5py = "^3.9.0"
rasterio = "^1.3.8"
cfgrib = "^0.9.10.4"
pooch = "^1.7.0"
eccodes = "^1.6.0"
rioxarray = "^0.14.1"
pre-commit = "^3.3.3"

[tool.poetry.extras]
netcdf = ["netCDF4"]
hdf5 = ["h5py"]
geotiff = ["rasterio"]
grib = ["cfgrib", "eccodes"]

[tool.poetry.plugins."xpublish_file_metadata.formats"]
"netcdf" = "xpublish_file_metadata.formats.netcdf:NetcdfFileMetadata"
"hdf5" = "xpublish_file_metadata.formats.hdf5:Hdf5FileMetadata"
"geotiff" = "xpublish_file_metadata.formats.geotiff:GeoTiffFileMetadata"
"grib" = "xpublish_file_metadata.formats.grib:GribFileMetadata"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
